[gd_scene load_steps=2 format=3 uid="uid://c8m4x0q0x8q1b"]

[ext_resource type="Script" path="res://scenes/ui/components/bot_slot.gd" id="1_mno90"]

[node name="BotSlot" type="PanelContainer"]
custom_minimum_size = Vector2(200, 120)
script = ExtResource("1_mno90")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VisualContainer" type="Control" parent="HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="ChassisVisual" type="TextureRect" parent="HBox/VisualContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmorVisual" type="TextureRect" parent="HBox/VisualContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponVisual" type="TextureRect" parent="HBox/VisualContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoContainer" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameEdit" type="LineEdit" parent="HBox/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Bot Name"

[node name="EnabledCheckbox" type="CheckBox" parent="HBox/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enabled"

[node name="SelectButton" type="Button" parent="HBox/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"
